--- a/vagrant-centos/units/marathon-lb.service
+++ b/vagrant-centos/units/marathon-lb.service
@@ -6,12 +6,12 @@ Requires=docker.service
 [Service]
 ExecStartPre=-/usr/bin/docker kill marathon-lb
 ExecStartPre=-/usr/bin/docker rm marathon-lb
-#EnvironmentFile=/etc/sysconfig/calico
+EnvironmentFile=/etc/sysconfig/marathon-lb
 ExecStart=/usr/bin/docker run --name marathon-lb \
 	--privileged \
 	--net=host \
 	-e PORTS=9090 \
-	djosborne/marathon-lb sse --marathon http://172.24.197.101:8080 --group external
+	djosborne/marathon-lb sse --marathon http://${MARATHON_IP}:8080 --group external
 
 [Install]
 WantedBy=multi-user.target
