--- a/vagrant-centos/Vagrantfile
+++ b/vagrant-centos/Vagrantfile
@@ -184,7 +184,7 @@ Vagrant.configure("2") do |config|
         # Setup marathon-lb
         host.vm.provision :docker, images: ["djosborne/marathon-lb"]
         host.vm.provision "file", source: "units/marathon-lb.service", destination: "/tmp/marathon-lb.service"
-        host.vm.provision :shell, inline "sh -c 'echo MARATHON_IP=http://#{master_ip}:8080' > /etc/sysconfig/marathon-lb'"
+        host.vm.provision :shell, inline: "sh -c 'echo MARATHON_IP=http://#{master_ip}:8080 > /etc/sysconfig/marathon-lb'"
         host.vm.provision :shell, inline: "mv /tmp/marathon-lb.service /usr/lib/systemd/system/marathon-lb.service"
         host.vm.provision :shell, inline: "systemctl start marathon-lb"
       else
